<resources>
    <string name="app_name">癞疙宝</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="phone_number">电\u3000话</string>
    <string name="sms_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="select">选择站区</string>
    <string name="on">微信登录</string>
    <string name="off">浏览器登录</string>
</resources>
